Add time component

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -1,11 +1,11 @@
 .default {
-    --primary-color: blue
+    --primary-font-color: white
 }
 
 .dark {
-    --primary-color: black
+    --primary-font-color: black
 }
 
 .light {
-    --primary-color: white
+    --primary-font-color: white
 }
