--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,16 +1,28 @@
 @import './theme.less';
 
-#app {
-    min-width: 100vw;
-    min-height: 100vh;
+body {
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    min-width: 100vw;
-    min-height: 100vh;
+#splash {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
+    opacity: 1;
+    background-color: #333;
+    z-index: 9999;
+    transition: opacity .25s;
+}
+
+#app {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
