Add copyright component

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -1,11 +1,12 @@
 .default {
-    --primary-font-color: white
+    --primary-font-color: white;
+    --seconda-font-color: rgba(255, 255, 255, 0.7);
 }
 
 .dark {
-    --primary-font-color: black
+    --primary-font-color: black;
 }
 
 .light {
-    --primary-font-color: white
+    --primary-font-color: white;
 }
