--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -6,8 +6,10 @@
 
     --commom-background-color: rgba(0, 0, 0, 0);
     --common-box-shadow: 2px 2px 6px rgba(255, 255, 255, 0.05) inset,
-                        2px 2px 6px rgba(0, 0, 0, 0.1);
+        2px 2px 6px rgba(0, 0, 0, 0.1);
 
+    --icon-svg-color: white;
+    --icon-hover-background-color: rgba(255, 255, 255, 0.2);
 }
 
 .dark {
