--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -10,6 +10,8 @@
 
     --icon-svg-color: white;
     --icon-hover-background-color: rgba(255, 255, 255, 0.2);
+
+    --input-placeholder-color: rgba(255, 255, 255, 0.6);
 }
 
 .dark {
