--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -12,6 +12,7 @@
     --icon-hover-background-color: rgba(255, 255, 255, 0.2);
 
     --input-placeholder-color: rgba(255, 255, 255, 0.6);
+    --selection-background-color: rgb(20, 150, 220);
 }
 
 .dark {
