--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -13,6 +13,9 @@
 
     --input-placeholder-color: rgba(255, 255, 255, 0.6);
     --selection-background-color: rgb(20, 150, 220);
+
+    --select-item-hover-background-color: rgba(255, 255, 255, 0.1);
+    --select-item-active-background-color: rgba(255, 255, 255, 0.2);
 }
 
 .dark {
