Add setting item component

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -1,6 +1,6 @@
 .default {
     --primary-font-color: rgba(255, 255, 255, 1);
-    --seconda-font-color: rgba(255, 255, 255, 0.7);
+    --secondary-font-color: rgba(255, 255, 255, 0.7);
 
     --common-backdrop-filter: blur(10px);
 
@@ -20,6 +20,13 @@
     --scrollbar-track-background-color: rgba(0, 0, 0, 0);
     --scrollbar-thumb-background-color: rgba(255, 255, 255, 0.8);
     --scrollbar-thumb-hover-background-color: rgba(255, 255, 255, 1);
+
+    --switch-background-color: rgba(0, 0, 255, 0);
+    --switch-round-background-color: rgba(255, 255, 255, 1);
+
+    --button-background-color: rgba(0, 0, 0, 0);
+    --button-hover-background-color: rgba(255, 255, 255, 0.1);
+    --reset-button-hover-background-color: #ff3c41;
 }
 
 .dark {
