--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,7 +30,7 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--seconda-font-color);
+    color: var(--secondary-font-color);
 }
 
 svg {
