--- a/src/assets/transition.css
+++ b/src/assets/transition.css
@@ -7,3 +7,36 @@
 .fade-leave-to {
   opacity: 0;
 }
+
+.extension-from-left-top-enter-active {
+  transform-origin: left top;
+  animation: bounce 0.5s ease;
+}
+.extension-from-left-top-leave-active {
+  transition: .25s ease;
+  opacity: 0;
+}
+
+.extension-from-right-top-enter-active {
+  transform-origin: right top;
+  animation: bounce 0.5s ease;
+}
+.extension-from-right-top-leave-active {
+  transition: .25s ease;
+  opacity: 0;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.05, 1.05);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
