--- a/src/assets/transition.css
+++ b/src/assets/transition.css
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.15s ease;
+  transition: opacity 0.25s ease;
 }
 
 .fade-enter-from,
@@ -40,3 +40,29 @@
     opacity: 1;
   }
 }
+
+.extension-from-center-enter-active {
+  transform-origin: center;
+  animation: bounce-center 0.5s ease;
+}
+.extension-from-center-leave-active {
+  transition: .25s ease;
+  opacity: 0;
+}
+
+
+@keyframes bounce-center {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.05, 1.05);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+
