Add update history

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -26,6 +26,8 @@
     --button-background-color: rgba(0, 0, 0, 0);
     --button-hover-background-color: rgba(255, 255, 255, 0.2);
     --button-active-background-color: rgba(255, 255, 255, 0.4);
+
+    --time-line-background-color: rgba(255, 255, 255, 1);
 }
 
 .dark {
