Add dark and light theme style

--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -11,29 +11,92 @@
     --icon-svg-color: rgba(255, 255, 255, 1);
 
     --input-placeholder-color: rgba(255, 255, 255, 0.6);
-    --selection-background-color: rgb(20, 150, 220);
+    --selection-background-color: rgba(14, 190, 255, 0.4);
 
     --item-hover-background-color: rgba(255, 255, 255, 0.1);
     --item-active-background-color: rgba(255, 255, 255, 0.2);
 
-    --scrollbar-track-background-color: rgba(0, 0, 0, 0);
     --scrollbar-thumb-background-color: rgba(255, 255, 255, 0.8);
     --scrollbar-thumb-hover-background-color: rgba(255, 255, 255, 1);
 
-    --switch-background-color: rgba(0, 0, 255, 0);
+    --switch-background-color: rgba(0, 0, 0, 0);
     --switch-round-background-color: rgba(255, 255, 255, 1);
 
-    --button-background-color: rgba(0, 0, 0, 0);
-    --button-hover-background-color: rgba(255, 255, 255, 0.2);
-    --button-active-background-color: rgba(255, 255, 255, 0.4);
+    --icon-button-hover-background-color: rgba(255, 255, 255, 0.1);
+    --icon-button-active-background-color: rgba(255, 255, 255, 0.2);
+    --text-button-background-color: rgba(0, 0, 0, 0);
+    --text-button-hover-background-color: rgba(255, 255, 255, 0.1);
+    --text-button-active-background-color: rgba(255, 255, 255, 0.2);
 
     --time-line-background-color: rgba(255, 255, 255, 1);
+
+    --card-background-color: rgba(0, 0, 0, 0);
 }
 
 .dark {
-    --primary-font-color: rgba(0, 0, 0, 1);
+    --primary-font-color: rgba(255, 255, 255, 1);
+    --secondary-font-color: rgba(255, 255, 255, 0.7);
+
+    --common-backdrop-filter: none;
+
+    --common-background-color: rgba(30, 30, 30, 1);
+    --common-box-shadow: none;
+
+    --icon-svg-color: rgba(255, 255, 255, 0.7);
+
+    --input-placeholder-color: rgba(255, 255, 255, 0.5);
+    --selection-background-color: rgba(14, 190, 255, 0.4);
+
+    --item-hover-background-color: rgba(50, 50, 50, 1);
+    --item-active-background-color: rgba(60, 60, 60, 1);
+
+    --scrollbar-thumb-background-color: rgba(50, 50, 50, 1);
+    --scrollbar-thumb-hover-background-color: rgba(60, 60, 60, 1);
+
+    --switch-background-color: rgba(70, 70, 70, 1);
+    --switch-round-background-color: rgba(255, 255, 255, 1);
+
+    --icon-button-hover-background-color: rgba(50, 50, 50, 1);
+    --icon-button-active-background-color: rgba(60, 60, 60, 1);
+    --text-button-background-color: rgba(40, 40, 40, 1);
+    --text-button-hover-background-color: rgba(50, 50, 50, 1);
+    --text-button-active-background-color: rgba(60, 60, 60, 1);
+
+    --time-line-background-color: rgba(50, 50, 50, 1);
+
+    --card-background-color: rgba(40, 40, 40, 1);
 }
 
 .light {
-    --primary-font-color: rgba(255, 255, 255, 1);
+    --primary-font-color: rgba(0, 0, 0, 0.8);
+    --secondary-font-color: rgba(0, 0, 0, 0.6);
+
+    --common-backdrop-filter: none;
+
+    --common-background-color: rgba(245, 245, 245, 1);
+    --common-box-shadow: none;
+
+    --icon-svg-color: rgba(0, 0, 0, 0.5);
+
+    --input-placeholder-color: rgba(0, 0, 0, 0.5);
+    --selection-background-color: rgba(14, 190, 255, 0.4);
+
+    --item-hover-background-color: rgba(235, 235, 235, 1);
+    --item-active-background-color: rgba(225, 225, 225, 1);
+
+    --scrollbar-thumb-background-color: rgba(225, 225, 225, 1);
+    --scrollbar-thumb-hover-background-color: rgba(215, 215, 215, 1);
+
+    --switch-background-color: rgba(245, 245, 245, 1);
+    --switch-round-background-color: rgba(255, 255, 255, 1);
+
+    --icon-button-hover-background-color: rgba(235, 235, 235, 1);
+    --icon-button-active-background-color: rgba(225, 225, 225, 1);
+    --text-button-background-color: rgba(255, 255, 255, 1);
+    --text-button-hover-background-color: rgba(235, 235, 235, 1);
+    --text-button-active-background-color: rgba(225, 225, 225, 1);
+
+    --time-line-background-color: rgba(235, 235, 235, 1);
+
+    --card-background-color: rgba(255, 255, 255, 1);
 }
