--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,7 +66,7 @@ button {
     width: 4px;
 }
 ::-webkit-scrollbar-track {
-    background: var(--scrollbar-track-background-color);
+    background: transparent;
 }
 ::-webkit-scrollbar-thumb {
     background: var(--scrollbar-thumb-background-color);
