--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -7,6 +7,8 @@
     --common-background-color: rgba(0, 0, 0, 0);
     --common-box-shadow: 2px 2px 6px rgba(255, 255, 255, 0.05) inset,
         2px 2px 6px rgba(0, 0, 0, 0.1);
+    --box-shadow-on-frosted-glass: 2px 2px 6px rgba(255, 255, 255, 0.05) inset,
+        2px 2px 6px rgba(0, 0, 0, 0.1);
 
     --icon-svg-color: rgba(255, 255, 255, 1);
 
@@ -41,6 +43,8 @@
 
     --common-background-color: rgba(30, 30, 30, 1);
     --common-box-shadow: none;
+    --box-shadow-on-frosted-glass: 2px 2px 6px rgba(255, 255, 255, 0.05) inset,
+        2px 2px 6px rgba(0, 0, 0, 0.1);
 
     --icon-svg-color: rgba(255, 255, 255, 0.7);
 
@@ -72,6 +76,8 @@
     --secondary-font-color: rgba(0, 0, 0, 0.6);
 
     --common-backdrop-filter: none;
+    --box-shadow-on-frosted-glass: 2px 2px 6px rgba(255, 255, 255, 0.05) inset,
+        2px 2px 6px rgba(0, 0, 0, 0.1);
 
     --common-background-color: rgba(245, 245, 245, 1);
     --common-box-shadow: none;
