--- a/src/assets/theme.less
+++ b/src/assets/theme.less
@@ -33,6 +33,8 @@
     --time-line-background-color: rgba(255, 255, 255, 1);
 
     --card-background-color: rgba(0, 0, 0, 0);
+
+    --check-box-background-color: rgba(255, 255, 255, 1);
 }
 
 .dark {
@@ -69,6 +71,8 @@
     --time-line-background-color: rgba(50, 50, 50, 1);
 
     --card-background-color: rgba(40, 40, 40, 1);
+
+    --check-box-background-color: rgba(255, 255, 255, 1);
 }
 
 .light {
@@ -105,4 +109,6 @@
     --time-line-background-color: rgba(235, 235, 235, 1);
 
     --card-background-color: rgba(255, 255, 255, 1);
+
+    --check-box-background-color: rgba(0, 0, 0, 0.6);
 }
